//
//         castor/messages/TapeserverProxyFactory.cpp
//
// This file is part of the Castor project.
// See http://castor.web.cern.ch/castor
//
// Copyright (C) 2003  CERN
// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU General Public License
// as published by the Free Software Foundation; either version 2
// of the License, or (at your option) any later version.
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
// You should have received a copy of the GNU General Public License
// along with this program; if not, write to the Free Software
// Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
//
// @author Castor Dev team, castor-dev@cern.ch
package castor.messages;

 enum TapeMode {
    TAPE_MODE_NONE = 1;
    TAPE_MODE_READ = 2 ;
    TAPE_MODE_READWRITE = 3;
    TAPE_MODE_DUMP = 4   ;
  }

message NotifyDriveBeforeMountStarted {
 required string vid = 1;
 required string unitName = 2;

  enum TapeClientType {
    CLIENT_TYPE_NONE = 1;
    CLIENT_TYPE_GATEWAY = 2;
    CLIENT_TYPE_READTP = 3;
    CLIENT_TYPE_WRITETP = 4;
    CLIENT_TYPE_DUMPTP = 5   ;
  }
  required TapeMode mode = 3;
  required TapeClientType clientType = 4;
}

message NotifyDriveTapeMounted {
 required string vid = 1;
 required string unitName = 2;
 required TapeMode mode = 3;
}

message NotifyDriveUnmountStarted {
}

message NotifyDriveTapeUnmounted {
}

message NotifyDriveBeforeMountStartedAnswer {
required uint32 howManyFilesOnTape = 1;
}
