// The CERN Tape Archive (CTA) project
// Copyright (C) 2015  CERN
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

package cta.tape.daemon.serializers;

// The message sent from drive process to process handler in the main process.
// The messages are used in a one-way communication where the drive process reports
// its status, plus any log variables needed for end of session summaries.

message LogParam {
  required string name = 20001;
  required string value = 20002;
}

message WatchdogMessage {
  required uint32 sessionstate = 20010;
  required uint32 sessiontype = 20011;
  optional uint64 memblocksmoved = 20012;
  repeated LogParam addedlogparams = 20013;
  repeated string deletedlogparams = 20014;
}
